changed the flutter-release.yml file

--- a/.github/workflows/flutter-release.yml
+++ b/.github/workflows/flutter-release.yml
@@ -15,9 +15,9 @@ on:
     inputs:
       name:
         # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
+        description: 'Automate'
         # Default value if no value is explicitly provided
-        default: 'World'
+        default: 'true'
         # Input has to be provided for the workflow to run
         required: true
 
